trunk - unreleased
==================

1.0.0-b1 - 2007-04-28
=====================

    - In the ATNS marshaller, preserve the field order by not using
      set.
      [nouri]

1.0.0-a1 - 2006-10-25
=====================

    - Fixed some deprecation warnings for guess_content_type.
      [hannosch]

    - Updated a test for generated XML export format.
      [hannosch]

    - Initial version, see README.txt for details.
      [lots of people]
